--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap");
+/* Google fonts import */
 
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap");
 /* Asterisk wildcard selector to override default styles added by the browser*/
 * {
   padding: 0;
@@ -21,7 +21,7 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "Oswald, sans-serif";
+  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
   color: #252525;
@@ -123,15 +123,10 @@ main {
   font-family: "Leto", sans-serif;
 }
 
-#reasons > h2 {
+#reasons h2 {
   font-size: 280%;
   margin-bottom: 20px;
-  font-family: "Oswald", sans-serif;
   text-align: center;
-}
-
-#reasons h3 {
-  font-family: "Oswald", sans-serif;
 }
 
 #benefits-physical > div,
@@ -140,9 +135,29 @@ main {
   margin-bottom: 20px;
 }
 
+#benefits p {
+  padding: 0 20px;
+}
+
 #benefits hr {
   border-top: 1px solid #3a3a3a;
   margin: 5px 0;
+}
+
+#circle-cover-bg {
+  background: url("../images/reasons-image.webp") no-repeat top center / cover;
+  height: 90vw;
+  width: 90vw;
+  margin-bottom: 20px;
+  border-radius: 50%;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+#benefits-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /*Footer*/
@@ -197,11 +212,56 @@ main {
     width: 300px;
     right: 50px;
   }
+
+  /*Reasons section*/
+  #benefits-physical,
+  #benefits-mental {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  #benefits-physical > div,
+  #benefits-mental > div {
+    width: 75%;
+  }
+  #benefits-mental > div {
+    text-align: end;
+    align-self: flex-end;
+  }
 }
 
 /*Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
   #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  /* Reasons section */
+  #benefits {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #benefits > div {
+    flex: 1;
+  }
+
+  #benefits-image {
+    order: 0;
+  }
+
+  #benefits-mental {
+    order: 1;
+  }
+
+  #benefits-mental > div {
+    align-self: flex-start;
+  }
+
+  #benefits-physical > div {
+    align-self: flex-end;
   }
 }
